src/libnx/wrapper/hid.nim


proc hidSetNpadJoyAssignmentModeDual*(id: HidControllerID): Result {.cdecl,
    importc: "hidSetNpadJoyAssignmentModeDual", header: headerhid.}
## / Merge two single joy-cons into a dual-mode controller. Use this after \ref hidSetNpadJoyAssignmentModeDual, when \ref hidSetNpadJoyAssignmentModeSingleByDefault was previously used (this includes using this manually at application exit).

proc hidMergeSingleJoyAsDualJoy*(id0: HidControllerID; id1: HidControllerID): Result {.
    cdecl, importc: "hidMergeSingleJoyAsDualJoy", header: headerhid.}
proc hidInitializeVibrationDevices*(VibrationDeviceHandles: ptr uint32;
                                   total_handles: csize; id: HidControllerID;
                                   `type`: HidControllerType): Result {.cdecl,
    importc: "hidInitializeVibrationDevices", header: headerhid.}
## / Gets HidVibrationDeviceInfo for the specified VibrationDeviceHandle.

proc hidGetVibrationDeviceInfo*(VibrationDeviceHandle: ptr uint32;
                               VibrationDeviceInfo: ptr HidVibrationDeviceInfo): Result {.
    cdecl, importc: "hidGetVibrationDeviceInfo", header: headerhid.}
## / Send the VibrationValue to the specified VibrationDeviceHandle.

proc hidSendVibrationValue*(VibrationDeviceHandle: ptr uint32;
                           VibrationValue: ptr HidVibrationValue): Result {.cdecl,
    importc: "hidSendVibrationValue", header: headerhid.}
## / Gets the current HidVibrationValue for the specified VibrationDeviceHandle.

proc hidGetActualVibrationValue*(VibrationDeviceHandle: ptr uint32;
                                VibrationValue: ptr HidVibrationValue): Result {.
    cdecl, importc: "hidGetActualVibrationValue", header: headerhid.}
## / Sets whether vibration is allowed, this also affects the config displayed by System Settings.

proc hidPermitVibration*(flag: bool): Result {.cdecl,
    importc: "hidPermitVibration", header: headerhid.}
## / Gets whether vibration is allowed.

proc hidIsVibrationPermitted*(flag: ptr bool): Result {.cdecl,
    importc: "hidIsVibrationPermitted", header: headerhid.}
## / Send VibrationValues[index] to VibrationDeviceHandles[index], where count is the number of entries in the VibrationDeviceHandles/VibrationValues arrays.

proc hidSendVibrationValues*(VibrationDeviceHandles: ptr uint32;
                            VibrationValues: ptr HidVibrationValue; count: csize): Result {.
    cdecl, importc: "hidSendVibrationValues", header: headerhid.}